# libvmod-parseform

./: .travis.yml  CHANGES.rst  Dockerfile  README.rst  configure.ac
src/: Makefile.am  vmod_parseform.c  vmod_parseform.vcc
src/tests/: test01.vtc  test02.vtc  test03.vtc  test04.vtc  test05.vtc
